# GaijinJam

./: .gitignore  CMakeLists.txt  README.md  gaijinjam.cbp  game  main.cpp
headers/: Animation.h  Character.h  Client.h  ClientController.h  Collider.h  CollisionListener.h  FPS.h  Game.h  GameObject.h  Helper.h  LayerSystem.h  Player.h  Point.h  PointMap.h  SceneManager.h  Sensor.h  Slider.h  Wall.h  constants.h
resources/: map.txt  maps.txt
src/: Animation.cpp  Character.cpp  Client.cpp  ClientController.cpp  Collider.cpp  CollisionListener.cpp  FPS.cpp  Game.cpp  GameObject.cpp  Helper.cpp  LayerSystem.cpp  Player.cpp  PointMap.cpp  SceneManager.cpp  Sensor.cpp  Slider.cpp  Wall.cpp  main.cpp
